// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect 1`] = `Object {}`;

exports[`connect with pending function state 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with pending object state 1`] = `
Object {
  "some": "state",
}
`;

exports[`get with action 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`nested set works 1`] = `
Object {
  "lower": "value",
  "lower2": "value2",
  "lower3": "value3",
  "lower4": "value4",
  "upper": "value",
  "upper2": "value2",
  "upper3": "value3",
  "upper4": "value4",
}
`;

exports[`register on connected store 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register on connected store with init as function 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register with plugin, no state and set 1`] = `Object {}`;

exports[`register with plugin, no state and set 2`] = `
Object {
  "some": "state",
}
`;

exports[`register with plugin, state function  1`] = `
Object {
  "action": [Function],
  "some": "state",
  "thing": 1,
}
`;

exports[`set action 1`] = `
Object {
  "some": "state",
}
`;

exports[`getStore 1`] = `
Object {
  "dispose": Array [],
  "id": undefined,
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
}
`;

exports[`getStore named 1`] = `
Object {
  "dispose": Array [],
  "id": "store1",
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
}
`;

exports[`getStore named 2`] = `Object {}`;
